# amdovx-modules

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  amdovx-modules.sln  loom.sln
cmake/: FindOpenVX.cmake
utils/: CMakeLists.txt
utils/annInferenceApp/: README.md  annInferenceApp.pro  annInferenceApp.py  assets.cpp  infcom.h  inference_compiler.cpp  inference_control.cpp  inference_control.h  inference_panel.cpp  inference_panel.h  inference_panel.ui  inference_receiver.cpp  inference_receiver.h  inference_viewer.cpp  inference_viewer.h  main.cpp  perf_graph.cpp  perf_graph.h  perf_graph.ui  resources.qrc  tcpconnection.h
utils/annInferenceServer/: CMakeLists.txt  README.md  arguments.cpp  arguments.h  common.cpp  common.h  compiler.cpp  configure.cpp  infcom.h  inference.cpp  inference.h  netutil.cpp  netutil.h  profiler.cpp  profiler.h  region.h  server.cpp  shadow.cpp  yoloregion.cpp  yoloregion.h
utils/annie_client/: InferenceViewer.pro  README.md  assets.h  inference_comm.h  inference_compiler.cpp  inference_compiler.h  inference_control.cpp  inference_control.h  inference_receiver.cpp  inference_receiver.h  inference_viewer.cpp  main.cpp  (+1 more)
utils/camera_parameter_detector/: CMakeLists.txt  README.md
utils/camera_parameter_detector/src/: Source.cpp  apply_color_correction.cpp  apply_color_correction.h  calculate_color_correction.cpp  calculate_color_correction.h  color_correction_matrix.cpp  color_correction_matrix.hpp  inputparameters.cpp  inputparameters.h  rect.cpp  rect.hpp  rectangular_list.cpp  rectangular_list.hpp  utils.cpp  utils.h
utils/inference_generator/: CMakeLists.txt  Makefile  README.md
utils/inference_generator/src/: caffe2openvx.cpp  inference_generator.cpp  nnef2openvx.cpp  proto2bin.cpp
utils/inference_generator/src/tensorflow/core/framework/: allocation_description.pb.cc  attr_value.pb.cc  cost_graph.pb.cc  device_attributes.pb.cc  function.pb.cc  graph.pb.cc  graph.pb.h  graph_transfer_info.pb.cc  graph_transfer_info.pb_text.cc  kernel_def.pb.cc  log_memory.pb.cc  node_def.pb.cc  op_def.pb.cc  reader_base.pb.cc  remote_fused_graph_execute_info.pb.cc  remote_fused_graph_execute_info.pb_text.cc  resource_handle.pb.cc  resource_handle.pb_text.cc  step_stats.pb.cc  summary.pb.cc  tensor.pb.cc  tensor_description.pb.cc  tensor_shape.pb.cc  tensor_slice.pb.cc  types.pb.cc  variable.pb.cc  variable.pb_text.cc  versions.pb.cc
utils/loom_shell/: CMakeLists.txt  README.md  help.cpp  loom_shell.cpp  loom_shell.h  loom_shell.vcxproj  loom_shell.vcxproj.filters  loom_shell_util.cpp  loom_shell_util.h
vx_ext_cv/: CMakeLists.txt  OpenCV_AddWeighted.cpp  OpenCV_BRISK_detector.cpp  OpenCV_Blur.cpp  OpenCV_Boxfilter.cpp  OpenCV_Canny.cpp  OpenCV_FAST_feature_detector.cpp  OpenCV_Gaussianblur.cpp  OpenCV_Good_Features_to_Track_detector.cpp  OpenCV_Laplacian.cpp  OpenCV_MSER_feature_detector.cpp  OpenCV_Medianblur.cpp  OpenCV_ORB_detector.cpp  OpenCV_SIFT_Compute.cpp  OpenCV_SIFT_Detect.cpp  OpenCV_SURF_Compute.cpp  OpenCV_SURF_Detect.cpp  OpenCV_Scharr.cpp  OpenCV_Sobel.cpp  OpenCV_Star_feature_detector.cpp  OpenCV_Tunnel.h  OpenCV_absdiff.cpp  OpenCV_adaptiveThreshold.cpp  OpenCV_add.cpp  OpenCV_bilateralFilter.cpp  OpenCV_bitwise_and.cpp  OpenCV_bitwise_not.cpp  OpenCV_bitwise_or.cpp  OpenCV_bitwise_xor.cpp  OpenCV_brisk_compute.cpp  OpenCV_buildOpticalFlowPyramid.cpp  OpenCV_buildPyramid.cpp  OpenCV_compare.cpp  OpenCV_convertScaleAbs.cpp  OpenCV_cornerHarris.cpp  OpenCV_cornerMinEigenVal.cpp  OpenCV_countNonZero.cpp  OpenCV_cvtColor.cpp  OpenCV_data_translator.cpp  OpenCV_dilate.cpp  (+27 more)
vx_loomio_media/: CMakeLists.txt
vx_loomsl/: CMakeLists.txt  README.md  live_stitch_api.cpp  live_stitch_api.cpp.orig  live_stitch_api.h  vx_loomsl.vcxproj  vx_loomsl.vcxproj.filters
vx_loomsl/doc/: settings.md
vx_loomsl/kernels/: alpha_blend.cpp  alpha_blend.h  chroma_key.cpp  chroma_key.h  color_convert.cpp  color_convert.h  color_correct.cpp  color_correct.h  exp_comp.cpp  exp_comp.h  exposure_compensation.cpp  exposure_compensation.h  initialize_setup_tables.cpp  initialize_stitch_config.cpp  initialize_stitch_remap.cpp  kernels.cpp  kernels.h  lens_distortion_remap.cpp  lens_distortion_remap.h  merge.cpp  multiband_blender.cpp  multiband_blender.h  noise_filter.cpp  noise_filter.h  pyramid_scale.cpp  seam_find.cpp  seam_find.h  warp.cpp  warp.h
vx_nn/: CMakeLists.txt  README.md
vx_nn/include/: vx_amd_nn.h
vx_nn/src/: activation_layer.cpp  argmax_layer.cpp  batch_normalization_layer.cpp  concat_layer.cpp  convolution_layer.cpp  copy_layer.cpp  deconvolution_layer.cpp  elementwise_layer.cpp  fully_connected_layer.cpp  image_tensor_converter.cpp  kernels.cpp  kernels.h  normalization_layer.cpp  pooling_layer.cpp  reshape_layer.cpp  roi_pooling_layer.cpp  scale_layer.cpp  slice_layer.cpp  softmax_layer.cpp  split_layer.cpp  tensor_add.cpp  tensor_convert_depth.cpp  tensor_convert_depth_node.cpp  tensor_image_converter.cpp  tensor_matrix_multiply.cpp  tensor_multiply.cpp  tensor_subtract.cpp  tensor_table_lookup.cpp  tensor_upsample.cpp  upsample_nearest_layer.cpp
vx_opencv/: CMakeLists.txt  OpenCV_Boxfilter.cpp  OpenCV_Canny.cpp  OpenCV_FAST_feature_detector.cpp  OpenCV_Gaussianblur.cpp  OpenCV_Good_Features_to_Track_detector.cpp  OpenCV_Laplacian.cpp  OpenCV_ORB_detector.cpp  OpenCV_SIFT_Compute.cpp  OpenCV_SURF_Compute.cpp  OpenCV_SURF_Detect.cpp  OpenCV_Sobel.cpp  OpenCV_Star_feature_detector.cpp  OpenCV_VX_Nodes.cpp  OpenCV_absdiff.cpp  OpenCV_add.cpp  OpenCV_bitwise_and.cpp  OpenCV_bitwise_not.cpp  OpenCV_bitwise_xor.cpp  OpenCV_brisk_compute.cpp  OpenCV_buildPyramid.cpp  OpenCV_compare.cpp  OpenCV_cornerHarris.cpp  OpenCV_countNonZero.cpp  OpenCV_cvtColor.cpp  OpenCV_data_translator.cpp  OpenCV_dilate.cpp  OpenCV_distanceTransform.cpp  OpenCV_divide.cpp  OpenCV_fastNlMeansDenoising.cpp  OpenCV_fastNlMeansDenoisingColored.cpp  OpenCV_filter2D.cpp  OpenCV_flip.cpp  OpenCV_multiply.cpp  OpenCV_orb_compute.cpp  OpenCV_pyrdown.cpp  OpenCV_sepFilter2D.cpp  OpenCV_simple_blob_detector.cpp  OpenCV_threshold.cpp  OpenCV_transpose.cpp  (+3 more)
(+20 files in other folders)
